# atomix

./: .ccsproject  .cproject  .gitignore  .project  API.md  Makefile.am  Makefile.am.common  README.md  README.x86  README_r1cmplr_todo  README_wifibb_deprecated  _configure  cmplrflags.cmd  confflags.cmd  config.site.debug  configure.ac  gen_ctags  linkerflags.cmd  linkerflags_k2k.cmd
app/: Makefile.am.app
app/pex2/: Makefile.am  Pex2.py
dotvim/: filetype.vim
exilib/: BlockASI_i.c  BlockASI_i.h  BlockASI_t.h  BlockAS_i.c  BlockAS_i.h  BlockAS_t.h  BlockA_i.c  BlockA_i.h  BlockA_t.h  BlockB_i.c  BlockB_i.h  BlockB_t.h  BlockDX_i.c  BlockDX_i.h  BlockDX_t.h  BlockX_i.c  BlockX_i.h  BlockX_t.h  BlockY_i.c  BlockY_i.h  BlockY_t.h  Makefile.am  README  exilib_t.h
memorymaps/: linker_memorymap_nyquist_template.cmd
oros/: Makefile.am.in.oros
oros/sfifos/: Makefile.am  README  fifoFactory.c  fifoFactory.h  fifoManager.h  fifoManagerUtil.c  fifoManagerUtil.h  fifoManager_inline.h
oros/sfifos/ilib/: BlockTD_i.c  BlockTD_i.h  BlockTD_t.h  BlockTR_i.c  BlockTR_i.h  BlockTR_t.h  BlockTZ_i.c  BlockTZ_i.h  BlockTZ_t.h  Makefile.am  README
oros/sfifos/lib/edmadriver/: .ccsproject  .cproject  .project  Makefile.am  README  edmaDriver.c  edmaDriver.h  edmaIntDispatcher.c  edmaIntDispatcher.h  edmaLinkDB.c  edmaLinkDB.h  edmaTypes.h  timestamp.c  timestamp.h
oros/sfifos/lib/edmadriver_test/: .ccsproject  .cproject  .project  c6616.cmd  linker.cmd  main.c
oros/sfifos/lib/ipc/: Makefile.am  README  ipc_cpy.c  ipc_cpy.h
oros/sfifos/python/: README  bufferTypes.py
oros/sfifos/python/inc/: fifoBufferTypes.h
oros/sfifos/python/src/: fifoTypedConstructors.c
oros/sfifos/tests/: Makefile.am.sfifostests
oros/sfifos/tests/test1/: README  fifos.c  fifos.h  main.c
oros/sfifos/tests/test1/log/: a.txt  b.txt  c.txt
oros/sfifos/tests/test2/: fifos.c  fifos.h  main.c
oros/sfifos/tests/test3/: README  blockA.c  blockA.h  blockB.c  blockB.h  blockT.c  blockT.h  fifos.c  fifos.h  main.c
oros/sfifos/tests/test_blocks/: BlockM.c  BlockM.h  BlockM_internal.c  BlockM_internal.h  BlockS.c  BlockS.h  BlockS_internal.c  BlockS_internal.h
oros/sfifos/tests/test_s1/: Makefile.am  README  atoms.or  fifos.or  main.c
oros/sfifos/tests/test_s2/: Makefile.am  README  atoms.or  fifos.or  main.c
oros/sfifos/tests/test_s2/old/: README  fifos.c  fifos.h  setupFifo.c  setupFifo.h
oros/sfifos/tests/test_s3/: Makefile.am  README  atoms.or  fifos.or  main.c
oros/sfifos/tests/test_s4/: Makefile.am  README  atoms.or  fifos.or  main.c
oros/sfifos/tests/test_s5/: Makefile.am  README  atoms.or  fifos.or  main.c
oros/sfifos/tests/test_s5p/: Makefile.am  README  atoms.or  fifos.or  main.c
oros/sysilib/: BlockCP2_i.c  BlockCP2_i.h  BlockCP2_t.h  BlockCP_i.c  BlockCP_i.h  BlockCP_t.h  BlockDrain_i.c  BlockDrain_i.h  BlockDrain_t.h  BlockJ_i.c  BlockJ_i.h  BlockJ_t.h  BlockJn_i.c  BlockJn_i.h  BlockJn_t.h  BlockKK_i.c  BlockKK_i.h  BlockKK_stateTable.h  BlockKK_t.h  BlockNOP_i.c  BlockNOP_i.h  BlockNOP_t.h  BlockTouch_i.c  BlockTouch_i.h  BlockTouch_t.h  Decision_t.h  Makefile.am  README  SYS_TimeStamp.c  SYS_TimeStamp.h
oros/tests/test1i/: Makefile.am  README  atoms.or  fifos.or  main.c  setup.c  setup.h  states.or
oros/tests/test2i/: Makefile.am  Makefile.am.inc  README  atoms.or  fifos.or  main.c  setup.c  states.or
osl/: .ccsproject  .cproject  .project  IQmathTables.c  LOG_logger.c  LOG_logger.h  Makefile.am  Makefile.am.vitdec  OSL_SNRBER.h  OSL_debug.c  OSL_debug.h  OSL_debug_pktdataout.h  amem4bitcpy.c  memSetup.c  util.c  x86.c
osl/eth/: classify1_bin.c  classify2_bin.c  cppi_device.c  cppi_qmss_mgmt.c  cppi_qmss_mgmt.h  cpsw_mgmt.c  cpsw_singlecore.h  eth.c  pa_mgmt.c  pam_bin.c  qmss_device.c  singlecore_osal.c  view_ale_table.c
osl/inc/: amem4bitcpy.h  amem4cpy_inl.h  amem8cpy_inl.h  mem4set_inl.h  memSetup.h  or_types.h  swpform.h  timing.h  util.h  x86.h  x86stdtypes.h
osl/inc/eth/: eth.h  view_ale_table.h
osl/inc/uhd/: uhd.h
osl/platform/: singlecore_osal.c
osl/uhd/: uhd.c
osl/vitdec/inc/: util.h
osl/vitdec/inc/vcpdriver/: edmaConfig.h  vcpConfig.h  vcpdriver.h  vcpdriver_api.h
osl/vitdec/inc/vitc/: vitc_api.h
osl/vitdec/inc/vitdec/: vitdec_profile.h
osl/vitdec/src/vcpdriver/: debug.c  edmaConfig.c  vcpConfig.c  vcpdriver.c
osl/vitdec/src/vitdec/: vitdec_profile.c
r1cmplr/: genR2.py  genatomstxt.py  gencplex.py  genstatestxt.py  hw_info.py  lpinput.py  orapp.py  orpy.py  orpy_util.py
r2cmplr/: _cl6x  _cl6x_allflags  _codegen_write_out.py  _create_afs_i  _create_b_i  _cygpath  _db.py  _debug_ts_opt.py  _gencode_atoms.py  _gencode_states.py  _gencode_wblock.py  _linker_conf.py  _program_analyzer.py  _ranlib  _scrape_b_i.py  _timestamp_config.py  _util.py
targetconfs/: evmbe6616_memconf1.ccxml  evmbe6616_xds560v2_onechip_memconf1.ccxml  evmbe6670_default.ccxml  evmbe6670_memconf2.ccxml  evmbe6670_memconf3.ccxml  evmbe6670_memconf5.ccxml  evmbe6670_memconf6.ccxml  evmbe6670_memconf7.ccxml  evmbe6670_memconf8.ccxml  evmbe6670_memconf9.ccxml  evmbe6670_xds100.ccxml  evmbe6670x2_memconf1.ccxml  evmbe6670x3_memconf1.ccxml  evmbe6670x4_memconf1.ccxml  evmbe6678_default.ccxml  simbe6618_approximate.ccxml  simbe6670_approximate.ccxml  simbe6670_functional.ccxml  tci6638k2k.ccxml
tirunutils/: breakpoint.py  cmds.py  conf.py  dss  jsutil.py  oros.js  oros.py  run_cmd_js  run_cmd_py
tracescripts/: axplot  mdat_to_c  parse  parsedat  plot_atoms.py  plot_states.py  pyparse  pyparse_atoms.py  pyparse_atoms.py_unmerged_from_quickc  pyparse_axns.py  pyparse_preproc.py  pyparse_states.py  pyparse_util.py  tests  tests_tx  zpreproc  zshow  zstparse  zstsep  (+6 more)
unittests/: .ccsproject  .cproject  .project  Makefile.am  TEST_ORILIB_PacketSearch_Align.c  TEST_printDebug.c  TEST_printDebug.h  check_ORILIB_PacketSearch_Align.py  check_myblock.c  coderunner.py  main.c  unittest.py  util.c  wifi_parameters.c  wifi_parameters.h
unittests/orilib/: Makefile.am  TEST_ORILIB_CFOEstimatorLTF_i.c  main.c
unittests/vitdec/: README  main.c  vcp2data.c
unittests/vitdecmap/: main.c
(+31 files in other folders)
